src/test/resources/refCompilerOutput/invalid/syntaxErr/expressions/printlnConcat.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:22 -- mismatched input '"' expecting INTEGER
1 parser error(s) detected, no further compilation attempted.
